[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydevelop-docs"
version = "0.1.0"
description = "Universal Python documentation generator with 40+ Sphinx extensions pre-configured. Zero-configuration setup for beautiful, professional documentation."
readme = "README.md"
license = "MIT"
authors = [{ name = "PyDevelop Team", email = "team@haive.ai" }]
maintainers = [{ name = "PyDevelop Team", email = "team@haive.ai" }]
keywords = [
  "documentation",
  "sphinx",
  "python",
  "docs",
  "api",
  "autodoc",
  "namespace-package",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.7",
  "tomlkit>=0.13.2",
  "pyyaml>=6.0.1",
  "questionary>=2.1.0",
  "rich>=14.1.0",
  "sphinx>=8.2.3",
  # TODO: Add sphinx-collections (see todo #sphinx-collections-uv-issue)
  "seed-intersphinx-mapping>=1.2.2",
  "sphinx-toolbox>=3.8.1",
  "furo>=2024.8.6",
  "myst-parser>=4.0.1",
]

[project.urls]
Homepage = "https://github.com/pydevelop/pydevelop-docs"
Repository = "https://github.com/pydevelop/pydevelop-docs"
Documentation = "https://pydevelop-docs.readthedocs.io"
Issues = "https://github.com/pydevelop/pydevelop-docs/issues"

[project.scripts]
pydevelop-docs = "pydevelop.docs.cli:cli"

[project.optional-dependencies]
docs = [
  "sphinxcontrib-jquery>=4.1",
  "sphinx-sitemap>=2.6.0",
  "sphinxcontrib-mermaid>=1.0.0",
  "sphinx-autoapi>=3.6.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-togglebutton>=0.3.2",
  "sphinx-autodoc-typehints>=3.1.0",
  "sphinx-tabs>=3.4.5",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-codeautolink>=0.17.0",
  "sphinx-tippy>=0.4.3",
  "sphinx-last-updated-by-git>=0.3.8",
  "sphinxext-rediraffe>=0.2.7",
  "autodoc-pydantic>=2.2.0",
  "sphinxcontrib-plantuml>=0.30",
  "sphinxcontrib-mermaid>=1.0.0",
  "enum-tools>=0.13.0",
  "erdantic>=1.0.6",
  "sphinx-design>=0.6.1",
  "sphinxcontrib-programoutput>=0.18",
  "sphinx-apischema>=0.1",
  "sphinx-exec-code>=0.16",
  "sphinx-runpython>=0.4.0",
]
dev = ["pre-commit>=4.2.0", "pre-commit-hooks>=5.0.0", "towncrier>=24.8.0"]

# PEP 420 namespace package configuration
[tool.hatch.build.targets.wheel]
packages = ["src/pydevelop"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/QUICKSTART.md",
  "/EXTENSIONS.md",
  "/LICENSE",
  "/CHANGELOG.md",
]

# Towncrier configuration for changelog
[tool.towncrier]
package_dir = "."
filename = "CHANGELOG.md"
directory = "changes"
title_format = "# PyDevelop-Docs Changelog\n\nAll notable changes to the PyDevelop Documentation Tools will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n\n<!-- towncrier release notes start -->"
issue_format = "[#{issue}](https://github.com/pydevelop/pydevelop-docs/issues/{issue})"
template = "changes/.template.md"
start_string = "<!-- towncrier release notes start -->"
underlines = ["", "", ""]
all_bullets = false

[[tool.towncrier.type]]
directory = "feature"
name = "🚀 Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "🐛 Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "improvement"
name = "✨ Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "⚠️ Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "💥 Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "🔒 Security"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "⚡ Performance"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "📚 Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dev"
name = "🔧 Development"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "🔀 Miscellaneous"
showcontent = true
