[tool.poetry]
name = "test-haive-template"
version = "0.1.0"
description = "Test template mimicking Haive's exact structure for AutoAPI testing"
authors = ["Test <test@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"

# Mimicking Haive's exact package structure with proper namespacing
testhaive-core = { path = "packages/testhaive-core", develop = true }
testhaive-agents = { path = "packages/testhaive-agents", develop = true }
testhaive-tools = { path = "packages/testhaive-tools", develop = true }

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-autoapi = "^3.6.0"
furo = "^2024.8.6"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
myst-parser = "^4.0.1"
sphinx-autodoc-typehints = "^3.1.0"
sphinxcontrib-autodoc-pydantic = "^2.2.0"
sphinx-design = "^0.6.1"
sphinx-tabs = "^3.4.5"
sphinx-inline-tabs = "^2023.4.21"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-blockdiag = "^3.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinx-codeautolink = "^0.17.0"
sphinx-exec-code = "^0.16"
sphinx-runpython = "^0.4.0"
sphinx-sitemap = "^2.6.0"
sphinx-last-updated-by-git = "^0.3.8"
sphinxext-opengraph = "^0.10.0"
sphinx-reredirects = "^1.0.0"
sphinx-favicon = "^1.0.1"
sphinxemoji = "^0.3.1"
sphinx-tippy = "^0.4.3"
enum-tools = "^0.13.0"
sphinx-toolbox = "^3.8.1"
seed-intersphinx-mapping = "^1.2.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
